--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
                     <label for="generate-input" class="block text-lg font-medium text-white">Scan a QR Code</label>
                     <div class="relative flex items-center" id="scanner-camera">
                         <div id="scanner" class="flex justify-center"></div>
+                        <div class="relative flex items-center" id="scan-result">
+                           <h2 class="text-2xl text-[#818cf8] font-semibold"></h2>
+                      </div>
+  
                     </div>
+                    
                   </div>
 
                 <div class="mt-2 flex justify-center rounded-lg border border-dashed border-white/25 px-6 py-10">
